separate adminServerController and NewServerController
- update spring boot to 2.2.7.RELEASE
- add tests for ServerPersistenceAdapter